--- a/Vegetable_Mall_Web/src/main/webapp/WEB-INF/views/user/information.html
+++ b/Vegetable_Mall_Web/src/main/webapp/WEB-INF/views/user/information.html
@@ -96,7 +96,7 @@
 					alert("你输入的用户数据不完整，请重新输入")
 					return;
 				}
-				$.post("/user/updateUser",{u_name:checkUsername,phone:checkPhone,address:checkAddress,gender:gender},function (data) {
+				$.post("/loginBefore/updateUser",{u_name:checkUsername,phone:checkPhone,address:checkAddress,gender:gender},function (data) {
 					if (data===null){
 						alert("修改失败");
 					}
