--- a/Vegetable_Mall_Web/src/main/webapp/WEB-INF/views/user/login.html
+++ b/Vegetable_Mall_Web/src/main/webapp/WEB-INF/views/user/login.html
@@ -92,10 +92,10 @@
 					alert("账户或密码错误");
 				}
 				if (data.stateCode===200){
-					if(data.data.u_id > 0){
 						alert("登陆成功")
 						window.location.href = "/index"
-					}
+				}else if (data.stateCode===502){
+					alert("该账户已被封禁");
 				}else{
 					alert("账户或密码错误");
 				}
