--- a/Vegetable_Mall_Web/src/main/webapp/WEB-INF/views/public/error.html
+++ b/Vegetable_Mall_Web/src/main/webapp/WEB-INF/views/public/error.html
@@ -27,31 +27,14 @@
 <!--描述-->
 <div class="heading-inner-page">
 	<div class="container">
-		<h2>500</h2>
+		<h2>错误页面</h2>
 		<ul class="breadcrumb">
 			<li><a href="/index">首页</a></li>
-			<li>500</li>
+			<li>错误页面</li>
 		</ul>
 	</div>
 </div>
-<!--主体-->
-<div th:replace="templates/body :: body"/>
-<!--翻页-->
-<ul class="pagination" style="margin:0 0 0 40%">
-	<div class="btn-group btn-group-lg" >
-	</div>
-	<div class="btn-group btn-group-lg">
-		<ul class="pagination">
-			<li><a class="btn-group" role="group" href="/fruit?page=1">首页</a></li>
-			<li><a th:href="@{'/fruit?page='+${pageInfo.pageNum-1}}">上一页</a></li>
-			<li th:each="pr:${pageInfo.navigatepageNums}">
-				<a th:href="@{'/fruit?page='+${pr}}" th:text="${pr}"></a>
-			</li>
-			<li><a th:href="@{'/fruit?page='+${pageInfo.pageNum+1}}">下一页</a></li>
-			<li><a th:href="@{'/fruit?page='+${pageInfo.navigateLastPage}}" aria-label="Next">尾页</a></li>
-		</ul>
-	</div>
-</ul>
+<h1 th:text="#{errorCode}"></h1>
 <!--尾部-->
 <footer th:insert="templates/footer :: footers"></footer>
 <!-- jQuery -->
