加入layui,优化了弹框

--- a/Vegetable_Mall_Web/src/main/webapp/WEB-INF/views/admin/addGoods.html
+++ b/Vegetable_Mall_Web/src/main/webapp/WEB-INF/views/admin/addGoods.html
@@ -74,7 +74,7 @@
     console.log(p_name, p_price, p_inventory, p_overview, d_id)
     if ((p_name == '' || p_name == null) || (p_price == '' || p_price == null) || (p_inventory == '' || p_inventory == null) || (d_id == '' || d_id == null)) {
       layer.alert("数据不能为空")
-      $("#form").submit()
+      // $("#form").submit()
       return;
     } else {
       $.ajax({
